update: cambios en la capa de dominio